# Devion

./: .gitignore  MANIFEST.in  README.md  go.mod  go.sum  pyproject.toml  requirements.txt  setup.py  test_integration.js
.github/workflows/: publish.yml  pubpip.yml
cli/: devion.js  index.js
cli/utils/: api.js  logger.js
cmd/: main.go
core/: main.py
core/interfaces/: cli_bridge.py  module_interface.py
core/modules/: analyze_module.py  config_module.py  deploy_module.py  fix_module.py  help_module.py  init_module.py  scan_module.py  status_module.py  use_module.py
core/utils/: system_check.py
devion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
devion/interfaces/: __init__.py  cli_bridge.py
devion/modules/: analyze_module.py  config_module.py  init_module.py  setup_module.py
devion/utils/: system_check.py
internal/scan/: detector.go  result.go  scan.go
internal/scan/project/: detect_dep_files.go  detect_languages.go  detect_project_file.go  detect_project_type.go
internal/scan/system/: detect_container.go  detect_cpu.go  detect_distro.go  detect_memory.go  detect_os.go  detect_path.go  detect_wsl.go  system.go
internal/scan/tools/: android-sdk.go  ansible.go  apache.go  awscli.go  azcli.go  base.go  bazel.go  cargo.go  clang.go  cmake.go  composer.go  dart.go  docker-compose.go  docker.go  dotnet.go  elixir.go  erlang.go  flutter.go  gcc.go  gcloud.go  gem.go  git.go  go.go  gradle.go  helm.go  hugo.go  java.go  javac.go  javascript.go  kotlin.go  kubectl.go  lua.go  make.go  maven.go  mysql.go  nginx.go  node.go  npm.go  openssl.go  perl.go  (+14 more)
pkg/core/: dispatcher.go  router.go
pkg/dispatcher/: dispatcher.go
pkg/module/: interface.go
pkg/registry/: registry.go
pkg/status/: status.go
scripts/: install.sh
