[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devion"
version = "0.1.21"
description = "The Ultimate Hybrid Development Environment Manager (Node.js + Python)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "MattHeeper", email = "contact@example.com"}
]
keywords = ["cli", "development", "environment", "python", "node", "manager", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: JavaScript",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/MattHeeper/Devion"
"Bug Tracker" = "https://github.com/MattHeeper/Devion/issues"

[tool.setuptools.packages.find]
# Automatically find the 'devion' package in the root directory
include = ["devion", "devion.*"]

[tool.setuptools]
# Ensure non-python files defined in MANIFEST.in are included
include-package-data = true
